changes to run newer versions